--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install build dependencies
-        run: pip install "pydjinni[publish]"
+        run: pip install .[publish]
       - name: Build dist
         run: python -m build
 
