--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -11,6 +11,6 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install doc dependencies
-        run: pip install "pydjinni" "pydjinni[doc]"
+        run: pip install . .[doc]
       - name: Build and publish docs
         run: mike deploy --push --update-aliases $(git describe --tag | grep -o '^v\d*.\d*') latest
