--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,10 @@ dependencies = [
     "arpeggio>=2,<3",
     "Jinja2>=3.1,<4",
     "mistletoe>=0.9,<1",
-    "pydantic==2.0a1",
-    "rich>=12.6,<13"
+    "pydantic==2.0a2",
+    "rich>=12.6,<13",
+    "PyYAML>=6,<7",
+    "dotmap>=1.3,<2"
 ]
 
 [tool.setuptools_scm]
@@ -53,3 +55,8 @@ Homepage = "https://jothepro.github.io/pydjinni"
 
 [project.scripts]
 pydjinni = "pydjinni.__main__:main"
+
+[project.entry-points.'pydjinni.generator']
+cpp = 'pydjinni.generator.cpp:CppTarget'
+java = 'pydjinni.generator.java:JavaTarget'
+objc = 'pydjinni.generator.objc:ObjcTarget'
