--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ doc = [
     "mike==1.1.2",
     "jsonref==1.0.1",
     "mkdocs-macros-plugin==0.7.0",
-    "mkdocs-gen-files==0.4.0"
+    "mkdocs-gen-files==0.4.0",
+    "mkdocstrings[python]==0.21.2"
 ]
 
 [project.urls]
