--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,9 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install build dependencies
-        run: pip install .[publish]
+        run: pip install . .[publish, dev]
+      - name: Run unit tests
+        run: pytest
       - name: Build dist
         run: python -m build
 
