--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,32 @@ on:
   release:
     types: [released, prereleased]
 jobs:
+  test:
+    strategy:
+      matrix:
+        python-version: [ 3.10, 3.11 ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dev dependencies
+        run: pip install . .[dev]
+      - name: Run unit tests
+        run: pytest
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
       - name: Install build dependencies
-        run: pip install . .[publish] .[dev]
-      - name: Run unit tests
-        run: pytest
+        run: pip install .[publish]
       - name: Build dist
         run: python -m build
 
