--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: [ 3.10, 3.11 ]
+        python-version: [ "3.10", "3.11" ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
