--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10"
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11"
 ]
 keywords = ["djinni"]
 dependencies = [
@@ -37,14 +38,14 @@ dev = [
     "pytest==7.3.1"
 ]
 publish = [
-    "twine==4.0.1",
-    "build==0.9.0"
+    "twine==4.0.2",
+    "build==0.10.0"
 ]
 doc = [
-    "mkdocs-material==8.5.10",
+    "mkdocs-material==9.1.6",
     "mkdocs-click==0.8.0",
     "mike==1.1.2",
-    "jsonref==1.0.1",
+    "jsonref==1.1.0",
     "mkdocs-macros-plugin==0.7.0",
     "mkdocs-gen-files==0.4.0",
     "mkdocstrings[python]==0.21.2"
