--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest==7.3.1"
+    "pytest==7.3.1",
+    "coverage==7.2.3"
 ]
 publish = [
     "twine==4.0.2",
