draft for support-lib support
- fixed build pipeline
- fixed Jinja2 template loading (Replaced Package loader)
- Added basic structure (concept) for C++,C gluecode (support-lib)
- Added logic to copy support-lib code to target output dirs automatically
- added template files (even if empty) in all generators
- fixed MANIFEST.in - include needed resources and exclude docs and tests
- added support to generate objective-c swift bridging header
- documentation improvements:
    - improved landing page structure
    - configured favicon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ edit_uri: edit/main/docs/
 copyright: Copyright &copy; 2023 jothepro
 theme:
   name: material
+  favicon: assets/logo.png
   logo: assets/logo.png
   font:
     text: Open Sans
