--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dev dependencies
-        run: pip install . .[dev]
+        run: pip install .[dev]
       - name: Run unit tests
         run: pytest
   build:
