--- a/src/pydjinni/generator/CMakeLists.txt
+++ b/src/pydjinni/generator/CMakeLists.txt
@@ -8,5 +8,19 @@ add_library(common_support_lib
 
 target_include_directories(common_support_lib PUBLIC support_lib/include)
 
+add_library(support_lib::common ALIAS common_support_lib)
+
 add_subdirectory(java/jni)
 add_subdirectory(objc/objcpp)
+
+add_executable(common_support_lib_tests
+    support_lib/tests/test.cpp
+)
+
+target_link_libraries(common_support_lib_tests
+    PRIVATE
+        support_lib::common
+        Catch2::Catch2WithMain
+)
+
+catch_discover_tests(common_support_lib_tests)
