--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Configure CMake
-        run: cmake configure -B build
+        run: cmake -B build
       - name: Build
         run: cmake --build build
       - name: Run Unit-Tests
@@ -93,12 +93,12 @@ jobs:
         if: github.event.release.draft
         run: twine upload -r testpypi -p ${{ env.TWINE_TESTPYPI_PASSWORD }} --disable-progress-bar dist/*
       - name: Publish package to PyPi
-        if: ${{ !github.event.release.draft }}
+        if: ! github.event.release.draft
         run: twine upload --disable-progress-bar dist/*
   publish_docs:
     runs-on: ubuntu-latest
     needs: [publish]
-    if: ${{ github.event_name == 'release' && !github.event.release.draft && !github.event.release.prerelease }}
+    if: github.event_name == 'release' && ! github.event.release.draft && ! github.event.release.prerelease
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
