--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,12 @@ dependencies = [
     "Jinja2>=3.1,<4",
     "mistletoe>=0.9,<1",
     "pydantic==2.0a2",
-    "rich>=12.6,<13",
-    "PyYAML>=6,<7",
-    "dotmap>=1.3,<2"
+    'rich>=12.6,<13',
+    'PyYAML>=6,<7',
+    'dotmap>=1.3,<2',
+    'tomli>=1.1.0,<2; python_version < "3.11"',
+    'tomli_w>=1.0,<2',
+    'setuptools>=65'
 ]
 
 [tool.setuptools_scm]
@@ -63,3 +66,6 @@ pydjinni = "pydjinni.__main__:main"
 cpp = 'pydjinni.generator.cpp:CppTarget'
 java = 'pydjinni.generator.java:JavaTarget'
 objc = 'pydjinni.generator.objc:ObjcTarget'
+
+[project.entry-points.'pygments.lexers']
+djinni='pydjinni.lexer:PyDjinniLexer'
