--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dev dependencies
         run: pip install .[dev]
       - name: Run tests
-        run: pytest
+        run: pytest tests
   test_support_lib:
     name: Unit-test Support Lib
     strategy:
@@ -38,6 +38,22 @@ jobs:
         run: cmake --build build
       - name: Run Unit-Tests
         run: ctest --test-dir build --output-on-failure
+  integration_test:
+    name: Run Integration tests
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Install dev dependencies
+        run: pip install .[dev]
+      - name: Run tests
+        run: pytest it
   test_docs:
     name: Test-build documentation
     runs-on: ubuntu-latest
@@ -76,7 +92,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [build, test, test_support_lib, test_docs]
+    needs: [build, test, test_support_lib, integration_test, test_docs]
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v3
