--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ doc = [
     "jsonref==1.1.0",
     "mkdocs-macros-plugin==0.7.0",
     "mkdocs-gen-files==0.4.0",
-    "mkdocstrings[python]==0.21.2"
+    "mkdocstrings[python]==0.21.2",
+    "setuptools_scm"
 ]
 
 [project.urls]
