--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,26 +20,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Install dev dependencies
         run: pip install .[dev]
       - name: Run tests
         run: pytest tests
-  test_support_lib:
-    name: Unit-test Support Lib
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Configure CMake
-        run: cmake -B build
-      - name: Build
-        run: cmake --build build
-      - name: Run Unit-Tests
-        run: ctest --test-dir build --output-on-failure
   integration_test:
-    name: Run Integration tests
+    name: Support Lib Unit-test & Integration tests
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -50,10 +37,37 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+          cache: 'pip'
+      - name: Install pydjinni
+        run: pip install .
+      - name: Cache CMake FetchContent
+        uses: actions/cache@v3
+        with:
+          path: build/_deps
+          key: ${{ runner.os }}-cmake-cache-${{ hashFiles('CMakeLists.txt') }}
+      - name: Configure CMake
+        run: cmake -B build
+      - name: Build
+        run: cmake --build build
+      - name: Run Tests
+        run: ctest --test-dir build --output-on-failure
+  cmake_test:
+    name: CMake module tests
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          cache: 'pip'
       - name: Install dev dependencies
         run: pip install .[dev]
       - name: Run tests
-        run: pytest it
+        run: pytest cmake/tests
   test_docs:
     name: Test-build documentation
     runs-on: ubuntu-latest
@@ -63,6 +77,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
       - name: Install doc dependencies
         run: pip install .[doc]
       - name: Build Documentation
@@ -79,6 +94,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
       - name: Install build dependencies
         run: pip install .[publish]
       - name: Build dist
@@ -92,7 +108,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [build, test, test_support_lib, integration_test, test_docs]
+    needs: [build, test, integration_test, cmake_test, test_docs]
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v3
@@ -103,6 +119,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
       - name: Install build dependencies
         run: pip install .[publish]
       - name: Publish package to TestPyPi
@@ -121,6 +138,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
       - name: Install doc dependencies
         run: pip install .[doc]
       - name: Build and publish docs
