--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest==7.3.1",
-    "coverage==7.2.3"
+    "coverage==7.2.3",
+    "junitparser==3.0.0"
 ]
 publish = [
     "twine==4.0.2",
