started working on support-lib and integration testing
- copied code from old support lib
- improved code generation for objc, java
- started setting up integration testing

--- a/it/CMakeLists.txt
+++ b/it/CMakeLists.txt
@@ -1,1 +1,10 @@
 project(PyDjinniIntegrationTests C CXX)
+
+include(Maven)
+
+maven_add(junit-jupiter-api GROUP org.junit.jupiter VERSION 5.9.3)
+maven_add(apiguardian-api GROUP org.apiguardian VERSION 1.1.2)
+maven_add(junit-platform-commons GROUP org.junit.platform VERSION 1.9.3)
+
+
+add_subdirectory(record)
