--- a/src/pydjinni/generator/CMakeLists.txt
+++ b/src/pydjinni/generator/CMakeLists.txt
@@ -2,11 +2,10 @@ cmake_minimum_required(VERSION 3.6.0)
 
 project(PyDjinniCommonSupportLib C CXX)
 
-add_library(common_support_lib
-        support_lib/src/common.cpp
-)
+add_library(common_support_lib INTERFACE)
 
-target_include_directories(common_support_lib PUBLIC support_lib/include)
+target_include_directories(common_support_lib INTERFACE support_lib/include)
+target_compile_features(common_support_lib INTERFACE cxx_std_20)
 
 add_library(support_lib::common ALIAS common_support_lib)
 
