--- a/src/pydjinni/generator/java/jni/CMakeLists.txt
+++ b/src/pydjinni/generator/java/jni/CMakeLists.txt
@@ -1,6 +1,10 @@
-cmake_minimum_required(VERSION 3.6.0)
+cmake_minimum_required(VERSION 3.24)
 
 project(PyDjinniJniSupportLib C CXX)
+
+set(JAVA_AWT_LIBRARY NotNeeded)
+set(JAVA_AWT_INCLUDE_PATH NotNeeded)
+find_package(JNI REQUIRED QUIET)
 
 add_library(jni_support_lib
         support_lib/src/support.cpp
@@ -8,6 +12,6 @@ add_library(jni_support_lib
 
 target_include_directories(jni_support_lib PUBLIC support_lib/include)
 
-target_link_libraries(jni_support_lib PUBLIC support_lib::common)
+target_link_libraries(jni_support_lib PUBLIC support_lib::common JNI::JNI)
 
 add_library(support_lib::jni ALIAS jni_support_lib)
