feat: added namespace support
In the IDL file the code can now be structured into
additional namespaces. In theory namespaces can be
nested infinitely, careful use of the feature is recommended though.

- In Java the namespaces are converted to packages
- In C++ the namespaces are convertet to namespaces
- In Objc the namespaces are part of the type name
- In Swift the namespaces are defined as nested types

--- a/src/pydjinni/generator/java/jni/CMakeLists.txt
+++ b/src/pydjinni/generator/java/jni/CMakeLists.txt
@@ -7,7 +7,7 @@ set(JAVA_AWT_INCLUDE_PATH NotNeeded)
 find_package(JNI REQUIRED QUIET)
 
 add_library(jni_support_lib
-        support_lib/src/support.cpp
+        support_lib/src/pydjinni/support.cpp
 )
 
 target_include_directories(jni_support_lib PUBLIC support_lib/include)
