WIP: add IDL const value assignment
- the IDL grammar allows for value assignment to constants
- primitive types and records can be assigned
- basic type checking: does the value fit the variable type?
- add `source_dir` information to generated files report
- some support lib refactoring (unclear state)
- improve IDL namespaces. allow for scoped type references

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,10 @@ Include(FetchContent)
 Include(CTest)
 Include(PyDjinni)
 
-option(DJINNI_JNI "Build for Java/JNI interop" OFF)
-option(DJINNI_OBJC "Build for Objective-C interop" OFF)
+option(PYDJINNI_JNI "Build for Java/JNI interop" OFF)
+option(PYDJINNI_OBJC "Build for Objective-C interop" OFF)
 
 if(BUILD_TESTING)
-    find_package(Java REQUIRED)
-    include(UseJava)
     FetchContent_Declare(
       Catch2
       GIT_REPOSITORY https://github.com/catchorg/Catch2.git
