add roadmap to landing page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,8 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
 extra:
   version:
     provider: mike
