WIP: continued work on compiling first test case
- jni code is now compiling
- objc and objcpp code has made some progress

--- a/it/record/pydjinni.yaml
+++ b/it/record/pydjinni.yaml
@@ -24,3 +24,4 @@ generate:
     out:
       header: generated/include/objcpp
       source: generated/src/objcpp
+    namespace: test::record::objcpp
