WIP: introduce properties and add parsing support for generics
- introducing properties: a shortcut for defining getters and setters for a given value.
  The plan is to support notifications when the property has changed.
- introducing parsing support for generics.
- fixed bug that would make cmake tests fail
- added "parcellable" deriving type
- added namespace and property support to pygments lexer
- started working on "Features" documentation, that explains
  each and every feature of the IDL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
   - Getting started:
       - Installation: installation.md
       - Usage: usage.md
+      - Features: features.md
       - Migration: migration.md
   - Reference:
       - CLI: cli.md
