--- a/src/pydjinni/generator/objc/objcpp/support_lib/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/objcpp/support_lib/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.6.0)
 
-project(PyDjinniObjcSupportLib OBJC OBJCXX)
+project(PyDjinniObjc_SupportLib OBJC OBJCXX)
 
 add_library(objc_support_lib
-        support_lib/src/pydjinni/support.mm
-        support_lib/src/pydjinni/error.mm
-        support_lib/src/pydjinni/proxy_cache.mm
+        src/pydjinni/support.mm
+        src/pydjinni/error.mm
+        src/pydjinni/proxy_cache.mm
 )
 
 target_compile_options(objc_support_lib PUBLIC "-fobjc-arc")
 
-target_include_directories(objc_support_lib PUBLIC support_lib/include)
+target_include_directories(objc_support_lib PUBLIC include)
 
 target_link_libraries(objc_support_lib PUBLIC support_lib::common)
 
