--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,17 @@ cmake_minimum_required(VERSION 3.6.0)
 project(PyDjinniSupportLib C CXX)
 
 option(BUILD_TESTING "Whether testing should be enabled or not" ON)
-set(PYDJINNI_LANGUAGE_TARGETS "java;objc" CACHE STRING "List of languages that should be targeted" )
+
+set(PYDJINNI_LANGUAGE_TARGETS_DEFAULT cpp)
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+    list(APPEND PYDJINNI_LANGUAGE_TARGETS_DEFAULT objc java)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    list(APPEND PYDJINNI_LANGUAGE_TARGETS_DEFAULT java)
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    list(APPEND PYDJINNI_LANGUAGE_TARGETS_DEFAULT java)
+endif()
+
+set(PYDJINNI_LANGUAGE_TARGETS ${PYDJINNI_LANGUAGE_TARGETS_DEFAULT} CACHE STRING "List of languages that should be targeted" )
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
 Include(FetchContent)
