--- a/src/pydjinni/generator/java/it/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/CMakeLists.txt
@@ -20,8 +20,10 @@ function(java_test_case TEST_CASE_NAME)
     )
     implement_test_case(${TEST_CASE_NAME} LANGUAGE java OPTIONS
             ${TEST_CASE_OPTIONS}
-            generate.java.loader:${TEST_CASE_NAME}
-            generate.jni.loader:${TEST_CASE_NAME})
+            generate.java.out:${CMAKE_CURRENT_LIST_DIR}/generated/java
+            generate.jni.out.header:${CMAKE_CURRENT_LIST_DIR}/generated/include/jni
+            generate.jni.out.source:${CMAKE_CURRENT_LIST_DIR}/generated/src/jni
+            generate.java.loader:${TEST_CASE_NAME})
 
     set(JNI_TARGET_NAME ${TEST_CASE_NAME})
     set(JAVA_TARGET_NAME ${TEST_CASE_NAME}Java)
