updated MANIFEST.in to exclude all unit and integration tests
there is lots of tests scattered all around the repo.
They should now be all excluded from the final pydjinni distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-prune tests
 prune docs
 global-include *.cleanpeg
 global-include support_lib/**/*
 global-exclude CMakeLists.txt
+global-exclude tests/**
+global-exclude it/**
