added flags integration tests for cpp and java
- fixed some generation bugs in the java, jni and cpp code
- added Java integration tests for flags
- added C++ integration tests for enum and flags

--- a/src/pydjinni/generator/cpp/it/CMakeLists.txt
+++ b/src/pydjinni/generator/cpp/it/CMakeLists.txt
@@ -35,3 +35,13 @@ cpp_test_case(InterfaceTest
     SOURCES
         tests/test_interface.cpp
 )
+
+cpp_test_case(EnumTest
+    SOURCES
+        tests/test_enum.cpp
+)
+
+cpp_test_case(FlagsTest
+    SOURCES
+        tests/test_flags.cpp
+)
