added optional support
- optional fields or parameters can now be marked with `?`
- they are then nullable and treated accordingly in the different target languages
- added integration testing for optionals in records
- added unit test to make sure optional types can be parsed

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
       - IDL: idl.md
       - Configuration: config.md
       - Types: types.md
+      - Deriving: deriving.md
       - External Types: external_types.md
       - Processed Files: processed_files.md
       - CMake: cmake.md
