--- a/src/pydjinni/generator/objc/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/record/CMakeLists.txt
@@ -2,5 +2,8 @@ objc_test_case(RecordTest
     OPTIONS
         generate.objcpp.namespace:test::record_test::objcpp
     SOURCES
-        tests/RecordTests.m
+        tests/PrimitiveTypesTests.m
+        tests/CollectionTypesTests.m
+        tests/OptionalTypesTests.m
+        tests/ConstantTypesTests.m
 )
