add binary type
- add binary datatype
- add integration testing for binary
- extend tests for collection types
- upgrade to pydantic v2.0

--- a/src/pydjinni/generator/java/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/record/CMakeLists.txt
@@ -8,5 +8,6 @@ java_test_case(RecordTest
         tests/TestPrimitiveTypes.java
         tests/TestCollectionTypes.java
         tests/TestOptionalTypes.java
+        tests/TestBinaryTypes.java
         tests/TestConstantTypes.java
 )
