--- a/src/pydjinni/generator/objc/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/record/CMakeLists.txt
@@ -5,5 +5,6 @@ objc_test_case(RecordTest
         tests/PrimitiveTypesTests.m
         tests/CollectionTypesTests.m
         tests/OptionalTypesTests.m
+        tests/BinaryTypesTests.m
         tests/ConstantTypesTests.m
 )
