--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "arpeggio>=2,<3",
     "Jinja2>=3.1,<4",
     "mistletoe>=1.0,<2",
-    "pydantic==2.0b3",
+    "pydantic==2.0",
     'rich>=12.6,<13',
     'PyYAML>=6,<7',
     'dotmap>=1.3,<2',
