--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     'PyYAML>=6,<7',
     'dotmap>=1.3,<2',
     'tomli>=1.1.0,<2; python_version < "3.11"',
+    'StrEnum>=0.4; python_version < "3.11"',
     'tomli_w>=1.0,<2',
     'setuptools>=65'
 ]
