WIP: huge code refactoring
this represents a stable WIP state that is committed as a stable foundation
for ripping out the very heart  of marsahlling in the next step.

- moved marshalling back into the IdlParser: When marshalling fails,
  a context in the parsed file should be given.
- added intelligent annotated types for configuration parsing of Identifiers and Namespaces.
- improved generator write_header, write_source methods: No need to explicitly state the
  target file name if it can be derived from the given type_def
- updated pydantic to 2.0.2
- parser:
   - changed return type syntax to `->` (allows for a nicer syntax with upcoming function support)
   - added support for parsing named and anonymous functions
   - type resolving inside namespaces does now respect the current namespace
     and searches for the type in the current and all upper namespaces
   - to reference a type by absolute namespace name, it can be prefixed with `.`
   -
- WIP: started draft on function marshalling. Broken + WIP!

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,5 +98,6 @@ nav:
   - Development:
       - Setup: dev_setup.md
       - Architecture: architecture.md
-      - Plugins: plugins.md
+      - Plugins:
+          - Generator Plugin: generator_plugin.md
 
