--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "arpeggio>=2,<3",
     "Jinja2>=3.1,<4",
     "mistletoe>=1.0,<2",
-    "pydantic==2.0",
+    "pydantic>=2.0.2,<3",
     'rich>=12.6,<13',
     'PyYAML>=6,<7',
     'dotmap>=1.3,<2',
@@ -48,13 +48,13 @@ publish = [
     "build==0.10.0"
 ]
 doc = [
-    "mkdocs-material==9.1.9",
+    "mkdocs-material==9.1.18",
     "mkdocs-click==0.8.0",
     "mike==1.1.2",
     "jsonref==1.1.0",
-    "mkdocs-macros-plugin==0.7.0",
-    "mkdocs-gen-files==0.4.0",
-    "mkdocstrings[python]==0.21.2",
+    "mkdocs-macros-plugin==1.0.1",
+    "mkdocs-gen-files==0.5.0",
+    "mkdocstrings[python]==0.22.0",
     "setuptools_scm"
 ]
 
