huge generator refactoring
- marshalling now happens during generation
- cyclic dependencies are not a problem any more, as marshalling
  is guranteed to be executed once all decls have a marshal
  object assigned
- all values are computed as cached properties when needed.
  This guarantees that nothing is computed multiple times
- added support for YAML export (still untested)
- started working on generator plugin api documentation
- the parser now stores the full position information on each AST node: start, end, filename
- fixed problem in CMake wrapper: emtpy lists are now also defined
- run CMake unit tests with log-level debug by default (makes it easier to spot errors)
- deleted generator marshalling unit tests (must be re-added later)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ pydjinni = "pydjinni.__main__:main"
 cpp = 'pydjinni.generator.cpp:CppTarget'
 java = 'pydjinni.generator.java:JavaTarget'
 objc = 'pydjinni.generator.objc:ObjcTarget'
+yaml = 'pydjinni.generator.yaml:YamlTarget'
 
 [project.entry-points.'pygments.lexers']
 djinni='pydjinni.lexer:PyDjinniLexer'
