implemented Lambda support for Objective-C and Java 💪
- supports both anonymous and named functions
- tested with integration tests

--- a/src/pydjinni/generator/cpp/it/CMakeLists.txt
+++ b/src/pydjinni/generator/cpp/it/CMakeLists.txt
@@ -45,3 +45,8 @@ cpp_test_case(FlagsTest
     SOURCES
         tests/test_flags.cpp
 )
+
+cpp_test_case(FunctionTest
+    SOURCES
+        tests/test_function.cpp
+)
