add support for cpp base records

--- a/src/pydjinni/generator/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/it/record/CMakeLists.txt
@@ -2,7 +2,10 @@ project(PyDjinniIntegrationTestRecord CXX)
 
 define_test_case(RecordTest
     INTERFACE record.djinni
-    SOURCES src/helper.cpp
+    SOURCES
+        src/helper.cpp
+        include/base_record.hpp
     OPTIONS
         generate.cpp.namespace:test::record
 )
+target_include_directories(RecordTestBase PUBLIC include)
