--- a/src/pydjinni/generator/objc/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/record/CMakeLists.txt
@@ -9,3 +9,9 @@ objc_test_case(RecordTest
         tests/ConstantTypesTests.m
         tests/BaseRecordTests.m
 )
+target_sources(RecordTestObjc
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/BaseRecord.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/BaseRecord.m
+)
+target_include_directories(RecordTestObjc PUBLIC include)
