--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 prune docs
 global-include *.cleanpeg
 global-include support_lib/**/*
+global-include template/**/*
 global-exclude CMakeLists.txt
 global-exclude tests/**
 global-exclude it/**
